buildscript {
	repositories {
		mavenLocal()
		mavenCentral()
		google()
		maven { url 'https://plugins.gradle.org/m2/' }
		maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
	}
	dependencies {

	}
}

allprojects {
	repositories {
		mavenLocal()
		mavenCentral()
		maven { url 'https://plugins.gradle.org/m2/' }
		maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
		maven { url 'https://jitpack.io' }
	}
	
	apply plugin: 'eclipse'
	apply plugin: 'idea'
	
	version = '0.0.1'
	ext.appName = 'jCity'
}

configure(subprojects) {
	
	apply plugin: 'java-library'
	sourceCompatibility = 8.0
	
	if(it.name == 'core') {
		apply plugin: 'groovy'
		
		compileGroovy {
			options.incremental = true
			options.compilerArgs << '-parameters'
		}
	}
	
	dependencies {
		implementation "org.codehaus.groovy:groovy-all:3.0.+"
	}
}

subprojects {
	
}

eclipse.project.name = 'jCity' + '-root'